헬퍼 삭제, 에러 텍스트어피어런스 추가, 높이 변경, 맥스 렝스 추가

--- a/app/src/main/res/layout/item_dialog_edit_text.xml
+++ b/app/src/main/res/layout/item_dialog_edit_text.xml
@@ -32,14 +32,15 @@
             android:theme="@style/myEditText"
             app:placeholderText="@{placeHolder}"
             app:endIconMode="clear_text"
-            app:helperTextTextAppearance="@style/myTextSize8sdp"
+            app:errorTextAppearance="@style/myTextSize8sdp"
             app:hintTextAppearance="@style/myTextSize8sdp"
             app:placeholderTextAppearance="@style/myTextSize10sdp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/dialog_editText"
+                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_36sdp"
+                android:maxLength="30"
                 android:imeOptions="actionDone"
                 android:inputType="text"
                 android:text="@{setText}"
