--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,8 +12,7 @@
             android:id="@+id/view_pager_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true"
-            android:visibility="gone">
+            android:fillViewport="true">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
@@ -38,6 +37,7 @@
         </com.example.project_myfit.ui.main.listfragment.LockableScrollView>
 
         <androidx.core.widget.NestedScrollView
+            android:background="?colorPrimary"
             android:id="@+id/recent_search_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
