--- a/app/src/main/res/layout/item_search_recycler_view.xml
+++ b/app/src/main/res/layout/item_search_recycler_view.xml
@@ -25,13 +25,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_4sdp"
-            android:background="@drawable/recycler_background"
-            android:visibility="gone">
+            android:background="@drawable/recycler_background">
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_200sdp"
+                android:layout_gravity="center_horizontal"
                 android:alpha="0.5"
                 android:text="@string/no_result"
                 android:textSize="@dimen/_10sdp" />
