--- a/app/src/main/res/layout/item_search_recycler_view.xml
+++ b/app/src/main/res/layout/item_search_recycler_view.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_4sdp"
+            android:visibility="gone"
             android:background="@drawable/recycler_background">
 
             <com.google.android.material.textview.MaterialTextView
