--- a/app/src/main/res/layout/item_main_recycler_view.xml
+++ b/app/src/main/res/layout/item_main_recycler_view.xml
@@ -22,16 +22,17 @@
 
         <FrameLayout
             android:id="@+id/no_data"
+            android:background="@drawable/recycler_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_4sdp"
-            android:background="@drawable/recycler_background"
             android:visibility="gone">
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/_280sdp"
                 android:alpha="0.5"
                 android:text="@string/no_data"
                 android:textSize="@dimen/_22sdp" />
