--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -74,6 +74,7 @@
                     android:id="@+id/recent_search_no_data"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:visibility="gone"
                     android:background="?colorPrimary">
 
                     <com.google.android.material.textview.MaterialTextView
