--- a/app/src/main/res/layout/item_tree_category.xml
+++ b/app/src/main/res/layout/item_tree_category.xml
@@ -4,11 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="category"
-            type="com.example.project_myfit.ui.main.database.Category" />
-
+            type="com.example.project_myfit.data.model.Category" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -31,6 +29,7 @@
                     android:id="@+id/arrow_icon_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:alpha="0.8"
                     android:layout_marginStart="@dimen/_4sdp"
                     app:srcCompat="@drawable/icon_triangle_right" />
 
@@ -38,6 +37,7 @@
                     android:id="@+id/folder_icon_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:alpha="0.8"
                     app:srcCompat="@drawable/icon_folder" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -50,7 +50,7 @@
                 android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:maxLines="1"
-                android:text="@{category.category}"
+                android:text="@{category.categoryName}"
                 android:textSize="@dimen/_11sdp"
                 tools:text="Short Sleeve" />
 
@@ -66,7 +66,7 @@
                 android:visibility="gone" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/amount"
+                android:id="@+id/contents_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -82,7 +82,8 @@
                 android:layout_height="match_parent"
                 android:paddingStart="0dp"
                 android:paddingEnd="@dimen/_16sdp"
-                app:srcCompat="@drawable/icon_add" />
+                android:alpha="0.8"
+                setAddIcon2="@{category.categoryName}" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <View
