--- a/app/src/main/res/layout/item_search_size.xml
+++ b/app/src/main/res/layout/item_search_size.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="size"
-            type="com.example.project_myfit.ui.main.listfragment.database.Size" />
+            type="com.example.project_myfit.data.model.Size" />
     </data>
 
     <FrameLayout
