--- a/app/src/main/res/layout/item_main_recycler_view.xml
+++ b/app/src/main/res/layout/item_main_recycler_view.xml
@@ -25,14 +25,13 @@
             android:background="@drawable/recycler_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/_4sdp"
-            android:visibility="gone">
+            android:layout_marginTop="@dimen/_4sdp">
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/_280sdp"
+                android:layout_marginTop="@dimen/_240sdp"
                 android:alpha="0.5"
                 android:text="@string/no_data"
                 android:textSize="@dimen/_22sdp" />
