--- a/app/src/main/res/layout/item_list_recycler_list.xml
+++ b/app/src/main/res/layout/item_list_recycler_list.xml
@@ -2,14 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <data>
-
         <variable
             name="size"
-            type="com.example.project_myfit.ui.main.listfragment.database.Size" />
+            type="com.example.project_myfit.data.model.Size" />
     </data>
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -87,6 +84,7 @@
                         android:layout_height="wrap_content"
                         android:alpha="0.7"
                         android:ellipsize="end"
+                        android:layout_marginBottom="@dimen/_2sdp"
                         android:maxLines="1"
                         android:text="@{size.brand.trim()}"
                         android:textSize="@dimen/_8sdp"
@@ -96,7 +94,6 @@
                         android:id="@+id/list_name_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="-1dp"
                         android:alpha="0.8"
                         android:ellipsize="end"
                         android:maxLines="1"
