--- a/app/src/main/res/layout/item_main_recycler_view.xml
+++ b/app/src/main/res/layout/item_main_recycler_view.xml
@@ -22,10 +22,10 @@
 
         <FrameLayout
             android:id="@+id/no_data"
-            android:background="@drawable/recycler_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/_4sdp">
+            android:layout_marginTop="@dimen/_4sdp"
+            android:background="@drawable/recycler_background">
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
