--- a/app/src/main/res/layout/item_search_recycler_view.xml
+++ b/app/src/main/res/layout/item_search_recycler_view.xml
@@ -25,14 +25,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_4sdp"
-            android:visibility="gone"
-            android:background="@drawable/recycler_background">
+            android:background="@drawable/recycler_background"
+            android:visibility="gone">
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_280sdp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/_280sdp"
                 android:alpha="0.5"
                 android:text="@string/no_result"
                 android:textSize="@dimen/_10sdp" />
