--- a/app/src/main/res/layout/item_tree_category.xml
+++ b/app/src/main/res/layout/item_tree_category.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="category"
             type="com.example.project_myfit.data.model.Category" />
@@ -29,8 +30,8 @@
                     android:id="@+id/arrow_icon_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:alpha="0.8"
                     android:layout_marginStart="@dimen/_4sdp"
+                    android:alpha="0.8"
                     app:srcCompat="@drawable/icon_triangle_right" />
 
                 <androidx.appcompat.widget.AppCompatImageView
@@ -58,10 +59,10 @@
                 android:id="@+id/current_position"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:alpha="0.5"
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:text="@string/current_position"
-                android:alpha="0.5"
                 android:textSize="@dimen/_6sdp"
                 android:visibility="gone" />
 
@@ -78,12 +79,12 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/add_icon"
+                setAddIcon2="@{category.categoryName}"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingStart="0dp"
-                android:paddingEnd="@dimen/_16sdp"
                 android:alpha="0.8"
-                setAddIcon2="@{category.categoryName}" />
+                android:paddingStart="0dp"
+                android:paddingEnd="@dimen/_16sdp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <View
