--- a/app/src/main/res/layout/item_tree_folder.xml
+++ b/app/src/main/res/layout/item_tree_folder.xml
@@ -81,12 +81,12 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/add_icon"
+                setAddIcon2="@{folder.folderName}"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingStart="0dp"
-                android:paddingEnd="@dimen/_16sdp"
                 android:alpha="0.8"
-                setAddIcon2="@{folder.folderName}" />
+                android:paddingStart="0dp"
+                android:paddingEnd="@dimen/_16sdp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <View
