--- a/app/src/main/res/layout/item_list_recycler_grid.xml
+++ b/app/src/main/res/layout/item_list_recycler_grid.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="size"
-            type="com.example.project_myfit.ui.main.listfragment.database.Size" />
+            type="com.example.project_myfit.data.model.Size" />
     </data>
 
     <FrameLayout
