--- a/app/src/main/res/layout/item_auto_complete.xml
+++ b/app/src/main/res/layout/item_auto_complete.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="recentSearch"
-            type="com.example.project_myfit.searchActivity.database.RecentSearch" />
+            type="com.example.project_myfit.data.model.RecentSearch" />
     </data>
 
     <FrameLayout
