--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.example.project_myfit.ui.main.listfragment.LockableScrollView
+        <com.example.project_myfit.util.LockableScrollView
             android:id="@+id/main_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -78,10 +78,10 @@
                     android:layout_height="match_parent" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
-        </com.example.project_myfit.ui.main.listfragment.LockableScrollView>
+        </com.example.project_myfit.util.LockableScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/main_fab"
+            android:id="@+id/main_top_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
