--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,12 +6,9 @@
         android:icon="@drawable/icon_home"
         android:title="@string/main" />
     <item
-        android:id="@+id/allListFragment"
         android:icon="@drawable/icon_all_list"
         android:title="@string/daily_look" />
-    <item
-        android:id="@+id/dummy_menu"
-        android:title="" />
+    <item android:title="" />
     <item
         android:id="@+id/favoriteFragment"
         android:icon="@drawable/icon_favorite"
