--- a/app/src/main/res/layout/fragment_input_output.xml
+++ b/app/src/main/res/layout/fragment_input_output.xml
@@ -22,7 +22,7 @@
         android:clipToPadding="false"
         android:overScrollMode="never"
         android:paddingBottom="@dimen/_68sdp"
-        tools:context=".fragment.main.listfragment.inputoutputfragment.InputOutputFragment">
+        tools:context=".fragment.inputoutput.InputOutputFragment">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
