상수 패키지 변경

--- a/app/src/main/res/layout/fragment_input_output.xml
+++ b/app/src/main/res/layout/fragment_input_output.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="constant"
-            type="com.example.project_myfit.MyFitConstant" />
+            type="com.example.project_myfit.util.MyFitConstant" />
     </data>
 
     <androidx.core.widget.NestedScrollView
