--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -102,6 +102,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:minHeight="@dimen/_560sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
                     android:background="@drawable/recycler_background"
                     android:visibility="gone">
 
