--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -8,7 +8,6 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.example.project_myfit.fragment.main.MainFragment"
-        android:label=""
         tools:layout="@layout/fragment_main">
         <action
             android:id="@+id/action_mainFragment_to_listFragment"
@@ -41,10 +40,10 @@
         android:name="com.example.project_myfit.fragment.list.ListFragment"
         tools:layout="@layout/fragment_list">
         <argument
-            android:name="categoryId"
+            android:name="category_id"
             app:argType="long" />
         <argument
-            android:name="folderId"
+            android:name="folder_id"
             app:argType="long" />
         <action
             android:id="@+id/action_listFragment_to_inputOutputFragment"
@@ -87,6 +86,9 @@
         <action
             android:id="@+id/action_listFragment_to_addDialog"
             app:destination="@id/addDialog" />
+        <argument
+            android:name="parent_category"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/inputOutputFragment"
@@ -94,13 +96,13 @@
         android:label=""
         tools:layout="@layout/fragment_input_output">
         <argument
-            android:name="categoryId"
+            android:name="category_id"
             app:argType="long" />
         <argument
-            android:name="folderId"
+            android:name="folder_id"
             app:argType="long" />
         <argument
-            android:name="sizeId"
+            android:name="size_id"
             app:argType="long" />
         <action
             android:id="@+id/action_inputOutputFragment_to_deleteConfirmDialog"
@@ -125,10 +127,10 @@
             android:name="item_type"
             app:argType="string" />
         <argument
-            android:name="parentCategory"
+            android:name="parent_category"
             app:argType="string" />
         <argument
-            android:name="parentId"
+            android:name="parent_id"
             app:argType="long" />
         <action
             android:id="@+id/action_addDialog_to_sameNameAddDialog"
@@ -240,7 +242,7 @@
         android:name="com.example.project_myfit.dialog.DeleteConfirmDialog"
         android:label="DeleteConfirmDialog" >
         <argument
-            android:name="sizeId"
+            android:name="size_id"
             app:argType="long" />
     </dialog>
     <dialog
