--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -120,6 +120,7 @@
     <activity
         android:id="@+id/searchActivity"
         android:name="com.example.project_myfit.searchActivity.SearchActivity"
+        tools:layout="@layout/activity_search"
         android:label="SearchActivity" />
     <!--    Dialog-->
     <dialog
