folder_id -> parent_id

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -187,7 +187,7 @@
             android:name="parent_category"
             app:argType="string" />
         <argument
-            android:name="folder_id"
+            android:name="parent_id"
             app:argType="long" />
         <argument
             android:name="new_name"
