--- a/app/src/main/res/layout/item_search_recycler_view.xml
+++ b/app/src/main/res/layout/item_search_recycler_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <FrameLayout
+        android:background="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
