--- a/app/src/main/res/layout/item_main_recycler_category.xml
+++ b/app/src/main/res/layout/item_main_recycler_category.xml
@@ -30,7 +30,7 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/main_card_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_30sdp"
             android:layout_marginHorizontal="@dimen/_12sdp"
             android:layout_marginVertical="@dimen/_2sdp"
             app:cardBackgroundColor="?myCardViewBackground"
@@ -39,12 +39,12 @@
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     setDotIcon="@{category.categoryName}"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="@dimen/_4sdp"
                     android:alpha="0.8"
@@ -55,8 +55,8 @@
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/main_category_text"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="@dimen/_6sdp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
                     android:alpha="0.9"
                     android:ellipsize="end"
                     android:maxWidth="@dimen/_220sdp"
