--- a/app/src/main/res/layout/item_search_size.xml
+++ b/app/src/main/res/layout/item_search_size.xml
@@ -104,6 +104,17 @@
                         android:textSize="@dimen/_11sdp"
                         tools:text="DAMAGED CREW NECK SWEATER" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/search_favorite_check_box"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="bottom"
+                    android:background="@android:color/transparent"
+                    android:button="@drawable/check_box_heart"
+                    android:checked="@={size.favorite}"
+                    android:gravity="bottom"
+                    android:scaleX="0.7"
+                    android:scaleY="0.7" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </com.google.android.material.card.MaterialCardView>
     </FrameLayout>
